--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -32,7 +32,8 @@ body {
   line-height: 1.5;
   letter-spacing: 0.04em;
   color: #2e2f42;
-}
+  margin: 0;
+  }
 p:last-child {
   margin-bottom: 0;
 }
@@ -60,4 +61,75 @@ ul{
   width: 100%;
   height: 100%;
   object-fit: cover;
+}
+/* form */
+.feedback-form{
+  display: flex;
+  flex-direction: column;
+  width: 408px; 
+  padding: 24px;
+  background-color: #e6e6e9;
+  margin: 0 auto;
+}
+
+.feedback-form input { 
+  border: 1px solid #808080;
+  border-radius: 4px;
+  width: 360px;
+  padding: 10px;
+  margin-bottom: 10px;  
+}
+
+.feedback-form input:focus{
+  border: 1px solid #000000;
+} 
+.feedback-form input:hover{
+  border: 1px solid #000000;
+} 
+
+.feedback-form textarea { 
+  border: 1px solid #808080;
+  border-radius: 4px;
+  width: 360px;
+  padding: 10px;
+  margin-bottom: 10px;  
+}
+button{
+  color: #FFFFFF;
+  background-color: #4E75FF;
+  border: none;
+  border-radius: 4px;
+  font-family: 'Montserrat', sans-serif;
+  height: 40px;
+}
+.feedback-form button{
+  width: 95px; 
+}
+button:hover{
+  background-color: #6C8CFF;
+}
+
+.feedback-form label {
+  display: flex;
+  flex-direction: column; 
+}
+
+.feedback-form input {
+  margin-top: 4px; 
+}
+.sl-wrapper {
+  background-color: #2E2F42;
+}
+.sl-wrapper .sl-navigation button.sl-prev,
+.sl-wrapper .sl-navigation button.sl-next
+ {
+  color: white;
+}
+
+.sl-wrapper .sl-counter{
+  color: white;
+}
+
+button .sl-wrapper .sl-close{
+  color: white;
 }
